--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
     <title>Quiet Life Generator</title>
 </head>
 <body>
-  <main>
+  <header>
     <section>
       <h1>Yoshikage Kira's introduction monologue generator</h1>
       <p>This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
+      <figure>
+        <img src="./images/Yoshikage_Kira_FullBody_Posing_with_Stand.png" width="300" height="400" />
+        <figcaption>Yoshikage Kira</figcaption>
+      </figure>
     </section>
-    <figure>
-      <img src="./images/Yoshikage_Kira_FullBody_Posing_with_Stand.png" width="300" height="400" />
-      <figcaption>Yoshikage Kira</figcaption>
-    </figure>
-    <section>
-      <h3>The original monologue:</h3>
+    <nav>
+      <ul>
+        <li><a href="#the-orignal-monologue">The original monologue</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="the-original-monologue">
+      <h2>The original monologue:</h2>
       <p>
         "My name is Yoshikage Kira. I'm 33 years old.
         My house is in the northeast section of Morioh, where all the villas are, and I am not married.
