--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Yoshikage Kira's introduction monologue generator</h1>
       <p>This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
       <figure>
-        <img src="./images/Yoshikage_Kira_FullBody_Posing_with_Stand.png" width="300" height="400" />
+        <img src="./image/Yoshikage_Kira_FullBody_Posing_with_Stand.png" width="300" height="400" />
         <figcaption>Yoshikage Kira</figcaption>
       </figure>
     </section>
@@ -40,6 +40,9 @@
         That is how I deal with society, and I know that is what brings me happiness.
         Although, if I were to fight, I wouldn&apos;t lose to anyone.”
       </p>
+      <audio controls muted loop autoplay>
+        <source src="./audio/mynameisyoshikagekira.mp3" type="audio/mpeg">
+      </audio>
       <!--Sẽ làm nút so sánh, đối chiếu-->
     </section>
     </main>
