--- a/index.html
+++ b/index.html
@@ -18,11 +18,89 @@
     </section>
     <nav>
       <ul>
+        <li><a href="#the-generator">The Quiet Life Generator</a></li>
         <li><a href="#the-orignal-monologue">The original monologue</a></li>
+        <!--RandomList-->
       </ul>
     </nav>
   </header>
   <main>
+    <section id="the-generator">
+      <h2>The Quiet Life Generator:</h2>
+      <form action="">
+      <!--Random nếu không điền => tạo random list-->
+        <div class="generator-box">
+            <label for="name">Name:</label>
+            <input 
+            id="name" 
+            name="name" 
+            type="text"
+            placeholder="e.g. Yoshikage Kira"
+            max="100"
+            />
+            <label for="age">Age:</label>
+            <input 
+            id="age" 
+            name="age" 
+            type="number" 
+            placeholder="e.g. 33"
+            min="1"
+            max="100"
+            />
+          <br>
+            <label for="address">Address:</label>
+            <input 
+            id="address" 
+            name="address" 
+            type="text" 
+            placeholder="at/in [your address]"
+            max="100"
+            />
+          <br>
+          <br>
+          <fieldset>
+            <legend>Is married?</legend>
+            <label for="yes-married">Yes</label>
+            <input 
+            id="yes-married" 
+            name="is-married?" 
+            type="radio"
+            value="yes"
+            />
+            <label for="no-married">No</label>
+            <input 
+            id="no-married" 
+            name="is-married?" 
+            type="radio"
+            value="no"
+            />
+          </fieldset>
+        <br>
+            <label for="randomifblank"
+            title="Randomly generate missing information from the random list">Random if blank</label>
+            <input
+            id="randomifblank"
+            name="randomifblank"
+            value="randomifblank"
+            type="checkbox"
+            title="Randomly generate missing information from the random list"
+            />
+        <br>
+            <label for="randomeverything"
+            title="Randomly generate everything from the random list">Random everything</label>
+            <input
+            id="randomeverything"
+            name="randomeverything"
+            value="randomeverything"
+            type="checkbox"
+            title="Randomly generate everything from the random list"
+            />
+        <br>
+        <br>
+          <button type="submit">Generate</button>
+        </div>
+      </form>
+    </section>
     <section id="the-original-monologue">
       <h2>The original monologue:</h2>
       <p>
@@ -40,9 +118,6 @@
         That is how I deal with society, and I know that is what brings me happiness.
         Although, if I were to fight, I wouldn&apos;t lose to anyone.”
       </p>
-      <audio controls muted loop autoplay>
-        <source src="./audio/mynameisyoshikagekira.mp3" type="audio/mpeg">
-      </audio>
       <!--Sẽ làm nút so sánh, đối chiếu-->
     </section>
     </main>
