minor input/form fix

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
             max="100"
             />
           <br>
-            <label for="address">Address:</label>
+            <label for="address">Place your house is in:</label>
             <input 
             id="address" 
             name="address" 
             type="text" 
-            placeholder="at/in [your address]"
-            max="100"
+            placeholder="the northeast section of Morioh"
+            max="200"
+            size="50"
             />
-            <small>(e.g. in the northeast section of Morioh)</small>
           <br>
           <br>
           <fieldset>
