major update - add json, add random everything functionality

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             max="100"
             />
           <br>
-            <label for="address">Place your house is in:</label>
+            <label for="place">Place your house is in:</label>
             <input 
-            id="address" 
-            name="address" 
+            id="place" 
+            name="place" 
             type="text" 
             placeholder="the northeast section of Morioh"
             max="200"
@@ -65,14 +65,14 @@
             <label for="yes-married">Yes</label>
             <input 
             id="yes-married" 
-            name="is-married?" 
+            name="is-married" 
             type="radio"
             value="married"
             />
             <label for="no-married">No</label>
             <input 
             id="no-married" 
-            name="is-married?" 
+            name="is-married" 
             type="radio"
             value="not married"
             checked
@@ -90,12 +90,12 @@
             />
             <small>(Randomly generate missing information from the random list) (coming soon)</small>
         <br>
-            <label for="randomeverything"
+            <label for="random-everything"
             title="Randomly generate everything from the random list">Random everything</label>
             <input
-            id="randomeverything"
-            name="randomeverything"
-            value="randomeverything"
+            id="random-everything"
+            name="random-everything"
+            value="random-everything"
             type="checkbox"
             title="Randomly generate everything from the random list"
             />
