added more inputs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             size="50"
             />
           <br>
-            <label>Are you married?&nbsp;</label>
+            <label>Are you married?:&nbsp;</label>
             <label for="yes-married">Yes</label>
             <input 
             id="yes-married" 
@@ -87,6 +87,14 @@
             max="200"
             size="50"
             />
+        <br>
+        <label for="timeGetHome">What time do you get home?:</label>
+            <select id="timeGetHome" name="timeGetHome">
+            </select>
+        <br>
+        <label for="timeToSleep">What time do you sleep?:</label>
+            <select id="timeToSleep" name="timeToSleep">
+            </select>
         <br>
             <label for="randomifblank"
             title="Randomly generate missing information from the random list">Random if blank</label>
@@ -147,6 +155,7 @@
     <p>© 2025 Quiet Life Generator. All rights reserved.</p>
     <p>This is a fan-made project. JoJo's Bizarre Adventure is copyrighted by Hirohiko Araki and Shueisha.</p>
   </footer>
+  <script src="utilities.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
