--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <p>This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
       <fieldset>
         <legend>What does it do?</legend>
+        <p>This website will generate Yoshikage Kira's introduction monologue from JoJo's Bizarre Adventure Part 4 using your input.</p>
       </fieldset>
       <figure>
         <img src="./image/Yoshikage_Kira_FullBody_Posing_with_Stand.png" width="300" height="400" />
