Add random-if-blank and lots of rewriting some code

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Quiet Life Generator</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
-<body>
+<body style="background-color: lightblue;">
   <header>
     <section>
-      <h1>Yoshikage Kira's introduction monologue generator</h1>
+      <h1 class="display-inline">Yoshikage Kira's introduction monologue generator</h1>
       <p>This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
       <fieldset id="headerFieldset">
         <legend>What does it do?</legend>
@@ -97,26 +97,26 @@
           <select id="timeToSleep" name="timeToSleep"></select>
           <br>
             <label for="randomifblank"
-            title="Randomly generate missing information from the random list">Random if blank</label>
+            title="Generate values randomly from a set list to fill in the blanks">Random if blank:</label>
             <input
             id="randomifblank"
             name="randomifblank"
             value="randomifblank"
             type="checkbox"
-            title="Randomly generate missing information from the random list"
+            title="Generate values randomly from a set list to fill in the blanks"
             />
-            <small>(Randomly generate missing information from the random list) (coming soon)</small>
+            <small>(Generate values randomly from a set list to fill in the blanks)</small>
           <br>
             <label for="random-everything"
-            title="Randomly generate everything from the random list">Random everything</label>
+            title="Generate all fields randomly from a set list.">Random everything:</label>
             <input
             id="random-everything"
             name="random-everything"
             value="random-everything"
             type="checkbox"
-            title="Randomly generate everything from the random list"
+            title="Generate all fields randomly from a set list."
             />
-            <small>(Randomly generate everything from the random list)</small>
+            <small>(Generate all fields randomly from a set list)</small>
           <br>
           <br>
           <div class="button-div">
