--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <header>
     <section>
       <h1 class="display-inline">Yoshikage Kira's introduction monologue generator</h1>
-      <p>This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
+      <p id="disclaimer">This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
       <fieldset id="headerFieldset">
         <legend>What does it do?</legend>
-        <p>This website will generate Yoshikage Kira's introduction monologue from JoJo's Bizarre Adventure Part 4 using your input.</p>
+        <p class="pNormal">This website will generate Yoshikage Kira's introduction monologue from JoJo's Bizarre Adventure Part 4 using your input.</p>
       </fieldset>
     </section>
   </header>
@@ -156,14 +156,14 @@
     <section>
       <fieldset class="paragraphFieldset">
         <legend class="paragraphLegend">Result</legend>
-        <p id="result-paragraph"><i>*Result will generate here.</i></p>
+        <p id="result-paragraph" class="paraResult"><i>*Result will generate here.</i></p>
       </fieldset>
     </section>
 
     <section>
       <fieldset class="paragraphFieldset">
         <legend class="paragraphLegend">The original monologue</legend>
-        <p>
+        <p class="paraResult">
           &ldquo;My name is Yoshikage Kira. I&apos;m 33 years old.
           My house is in the northeast section of Morioh, where all the villas are, and I am not married.
           I work as an employee for the Kame Yu department stores, and I get home every day by 8 PM at the latest.
