--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
             id="age" 
             name="age" 
             type="number" 
-            placeholder="e.g. 33"
+            placeholder="33"
             min="1"
             max="100"
             />
+            <small>(min: 1, max: 100)</small>
           <br>
             <label for="house">Your house is in:</label>
             <input 
