--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
           <br>
           <br>
           <div class="button-div">
-            <button type="submit">Generate</button>
-            <button type="submit">Generate</button>
+            <button id="generateButton" type="button">Generate</button>
+            <button id="translateButton" type="button">Translate</button>
             <button type="reset">Clear all</button>
           </div>
         </form>
