--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p id="disclaimer">This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
       <fieldset id="headerFieldset">
         <legend>What does it do?</legend>
-        <p class="pNormal">This project website generates Yoshikage Kira's iconic introduction monologue from JoJo's Bizarre Adventure: Part 4 using your custom inputs.</p>
+        <p class="pNormal">This website generates Yoshikage Kira's iconic introduction monologue from JoJo's Bizarre Adventure: Part 4 using your custom inputs.</p>
       </fieldset>
     </section>
   </header>
