--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <section>
-      <h1 class="display-inline">Yoshikage Kira's introduction monologue generator</h1>
+      <h1 align="center" class="display-inline">Yoshikage Kira's introduction monologue generator</h1>
       <p id="disclaimer">This is a fan-made project. All characters and images belong to Hirohiko Araki and Shueisha. Used under fair use for non-commercial educational purposes.</p>
       <fieldset id="headerFieldset">
         <legend>What does it do?</legend>
